--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://28157486-293a-4583-a431-061f0dc15d97.preview.emergentagent.com
 WDS_SOCKET_PORT=443
